--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2872,7 +2872,7 @@ input, select, textarea {
 		background-repeat: repeat,no-repeat;
 		background-size: auto,over;
 		color: #d2d3d4;
-		/* padding: 16em 0; */
+		padding: 16em 0;
 		position: relative;
 		text-align: center;
 		
@@ -3031,6 +3031,7 @@ input, select, textarea {
 			#banner {
 				padding: 12em 0;
 			}
+
 
 	}
 
