--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
-@import url("font-awesome.min.css");
+@import url('font-awesome.min.css');
 /* @import url("https://fonts.googleapis.com/css?family=Lato:300,700"); */
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 
 html,
 body,
@@ -123,7 +123,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-	content: "";
+	content: '';
 	content: none;
 }
 
@@ -189,7 +189,7 @@ input,
 select,
 textarea {
 	color: #646464;
-	font-family: "Lato", Helvetica, sans-serif;
+	font-family: 'Lato', Helvetica, sans-serif;
 	font-size: 15pt;
 	font-weight: 300;
 	line-height: 1.75em;
@@ -308,7 +308,7 @@ code {
 	background: rgba(144, 144, 144, 0.075);
 	border-radius: 0.5em;
 	border: solid 1px rgba(144, 144, 144, 0.25);
-	font-family: "Courier New", monospace;
+	font-family: 'Courier New', monospace;
 	font-size: 0.9em;
 	margin: 0 0.25em;
 	padding: 0.25em 0.65em;
@@ -316,7 +316,7 @@ code {
 
 pre {
 	-webkit-overflow-scrolling: touch;
-	font-family: "Courier New", monospace;
+	font-family: 'Courier New', monospace;
 	font-size: 0.9em;
 	margin: 0 0 2em 0;
 }
@@ -1888,9 +1888,9 @@ label {
 	margin: 0 0 1em 0;
 }
 
-input[type="text"],
-input[type="password"],
-input[type="email"],
+input[type='text'],
+input[type='password'],
+input[type='email'],
 select,
 textarea {
 	-moz-appearance: none;
@@ -1909,17 +1909,17 @@ textarea {
 	width: 100%;
 }
 
-input[type="text"]:invalid,
-input[type="password"]:invalid,
-input[type="email"]:invalid,
+input[type='text']:invalid,
+input[type='password']:invalid,
+input[type='email']:invalid,
 select:invalid,
 textarea:invalid {
 	box-shadow: none;
 }
 
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="email"]:focus,
+input[type='text']:focus,
+input[type='password']:focus,
+input[type='email']:focus,
 select:focus,
 textarea:focus {
 	border-color: #e0555a;
@@ -1949,9 +1949,9 @@ select option {
 	background: #fff;
 }
 
-input[type="text"],
-input[type="password"],
-input[type="email"],
+input[type='text'],
+input[type='password'],
+input[type='email'],
 select {
 	height: 2.75em;
 }
@@ -1960,8 +1960,8 @@ textarea {
 	padding: 0.75em 1em;
 }
 
-input[type="checkbox"],
-input[type="radio"] {
+input[type='checkbox'],
+input[type='radio'] {
 	-moz-appearance: none;
 	-webkit-appearance: none;
 	-ms-appearance: none;
@@ -1974,8 +1974,8 @@ input[type="radio"] {
 	z-index: -1;
 }
 
-input[type="checkbox"] + label,
-input[type="radio"] + label {
+input[type='checkbox'] + label,
+input[type='radio'] + label {
 	text-decoration: none;
 	color: #646464;
 	cursor: pointer;
@@ -1987,8 +1987,8 @@ input[type="radio"] + label {
 	position: relative;
 }
 
-input[type="checkbox"] + label:before,
-input[type="radio"] + label:before {
+input[type='checkbox'] + label:before,
+input[type='radio'] + label:before {
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
 	font-family: FontAwesome;
@@ -1997,12 +1997,12 @@ input[type="radio"] + label:before {
 	text-transform: none !important;
 }
 
-input[type="checkbox"] + label:before,
-input[type="radio"] + label:before {
+input[type='checkbox'] + label:before,
+input[type='radio'] + label:before {
 	background: rgba(144, 144, 144, 0.075);
 	border-radius: 0.5em;
 	border: solid 1px rgba(144, 144, 144, 0.25);
-	content: "";
+	content: '';
 	display: inline-block;
 	height: 1.65em;
 	left: 0;
@@ -2013,25 +2013,25 @@ input[type="radio"] + label:before {
 	width: 1.65em;
 }
 
-input[type="checkbox"]:checked + label:before,
-input[type="radio"]:checked + label:before {
+input[type='checkbox']:checked + label:before,
+input[type='radio']:checked + label:before {
 	background: #494d53;
 	border-color: #494d53;
 	color: #ffffff;
-	content: "\f00c";
+	content: '\f00c';
 }
 
-input[type="checkbox"]:focus + label:before,
-input[type="radio"]:focus + label:before {
+input[type='checkbox']:focus + label:before,
+input[type='radio']:focus + label:before {
 	border-color: #e0555a;
 	box-shadow: 0 0 0 1px #e0555a;
 }
 
-input[type="checkbox"] + label:before {
+input[type='checkbox'] + label:before {
 	border-radius: 0.5em;
 }
 
-input[type="radio"] + label:before {
+input[type='radio'] + label:before {
 	border-radius: 100%;
 }
 
@@ -2307,17 +2307,17 @@ ul.actions.fit.stacked {
 		padding-top: 0;
 	}
 
-	ul.actions:not(.fixed) li input[type="submit"],
-	ul.actions:not(.fixed) li input[type="reset"],
-	ul.actions:not(.fixed) li input[type="button"],
+	ul.actions:not(.fixed) li input[type='submit'],
+	ul.actions:not(.fixed) li input[type='reset'],
+	ul.actions:not(.fixed) li input[type='button'],
 	ul.actions:not(.fixed) li button,
 	ul.actions:not(.fixed) li .button {
 		width: 100%;
 	}
 
-	ul.actions:not(.fixed) li input[type="submit"].icon:before,
-	ul.actions:not(.fixed) li input[type="reset"].icon:before,
-	ul.actions:not(.fixed) li input[type="button"].icon:before,
+	ul.actions:not(.fixed) li input[type='submit'].icon:before,
+	ul.actions:not(.fixed) li input[type='reset'].icon:before,
+	ul.actions:not(.fixed) li input[type='button'].icon:before,
 	ul.actions:not(.fixed) li button.icon:before,
 	ul.actions:not(.fixed) li .button.icon:before {
 		margin-left: -0.5em;
@@ -2459,9 +2459,9 @@ table.alt tfoot {
 
 /* Button */
 
-input[type="submit"],
-input[type="reset"],
-input[type="button"],
+input[type='submit'],
+input[type='reset'],
+input[type='button'],
 .button {
 	-moz-appearance: none;
 	-webkit-appearance: none;
@@ -2491,45 +2491,45 @@ input[type="button"],
 	white-space: nowrap;
 }
 
-input[type="submit"]:hover,
-input[type="reset"]:hover,
-input[type="button"]:hover,
+input[type='submit']:hover,
+input[type='reset']:hover,
+input[type='button']:hover,
 .button:hover {
 	background-color: rgba(144, 144, 144, 0.075);
 	color: #545454 !important;
 }
 
-input[type="submit"]:active,
-input[type="reset"]:active,
-input[type="button"]:active,
+input[type='submit']:active,
+input[type='reset']:active,
+input[type='button']:active,
 .button:active {
 	background-color: rgba(144, 144, 144, 0.2);
 }
 
-input[type="submit"].icon:before,
-input[type="reset"].icon:before,
-input[type="button"].icon:before,
+input[type='submit'].icon:before,
+input[type='reset'].icon:before,
+input[type='button'].icon:before,
 .button.icon:before {
 	margin-right: 0.5em;
 }
 
-input[type="submit"].fit,
-input[type="reset"].fit,
-input[type="button"].fit,
+input[type='submit'].fit,
+input[type='reset'].fit,
+input[type='button'].fit,
 .button.fit {
 	width: 100%;
 }
 
-input[type="submit"].small,
-input[type="reset"].small,
-input[type="button"].small,
+input[type='submit'].small,
+input[type='reset'].small,
+input[type='button'].small,
 .button.small {
 	font-size: 0.8em;
 }
 
-input[type="submit"].large,
-input[type="reset"].large,
-input[type="button"].large,
+input[type='submit'].large,
+input[type='reset'].large,
+input[type='button'].large,
 .button.large {
 	font-size: 1em;
 	height: 3.5em;
@@ -2537,34 +2537,34 @@ input[type="button"].large,
 	padding: 0 2.25em;
 }
 
-input[type="submit"].primary,
-input[type="reset"].primary,
-input[type="button"].primary,
+input[type='submit'].primary,
+input[type='reset'].primary,
+input[type='button'].primary,
 .button.primary {
 	background-color: #e0555a;
 	color: #ffffff !important;
 }
 
-input[type="submit"].primary:hover,
-input[type="reset"].primary:hover,
-input[type="button"].primary:hover,
+input[type='submit'].primary:hover,
+input[type='reset'].primary:hover,
+input[type='button'].primary:hover,
 .button.primary:hover {
 	background-color: #e46b6f;
 }
 
-input[type="submit"].primary:active,
-input[type="reset"].primary:active,
-input[type="button"].primary:active,
+input[type='submit'].primary:active,
+input[type='reset'].primary:active,
+input[type='button'].primary:active,
 .button.primary:active {
 	background-color: #dc3f45;
 }
 
-input[type="submit"].disabled,
-input[type="submit"]:disabled,
-input[type="reset"].disabled,
-input[type="reset"]:disabled,
-input[type="button"].disabled,
-input[type="button"]:disabled,
+input[type='submit'].disabled,
+input[type='submit']:disabled,
+input[type='reset'].disabled,
+input[type='reset']:disabled,
+input[type='button'].disabled,
+input[type='button']:disabled,
 .button.disabled,
 .button:disabled {
 	background-color: #646464 !important;
@@ -2671,7 +2671,7 @@ input[type="button"]:disabled,
 }
 
 .slider .nav-next:before {
-	content: "\f105";
+	content: '\f105';
 	right: -0.05em;
 }
 
@@ -2680,7 +2680,7 @@ input[type="button"]:disabled,
 }
 
 .slider .nav-previous:before {
-	content: "\f104";
+	content: '\f104';
 	left: -0.05em;
 }
 
@@ -2785,17 +2785,18 @@ body.landing {
 }
 
 #header {
-	background-color: #fff;
+	background-color: #000;
 	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 	color: inherit;
 	cursor: default;
-	height: 3em;
+	height: 6em;
 	left: 0;
 	line-height: 3em;
 	position: fixed;
 	top: 0;
 	width: 100%;
 	z-index: 10000;
+	padding: 20px;
 }
 
 #header.reveal {
@@ -2848,6 +2849,8 @@ body.landing {
 	list-style: none;
 	margin: 0;
 	padding-left: 0;
+	padding: 20px;
+	color: #fff;
 }
 
 #header nav > ul > li {
@@ -2947,7 +2950,7 @@ body.landing {
 	-ms-transform: rotate(45deg);
 	transform: rotate(45deg);
 	background: #fff;
-	content: "";
+	content: '';
 	display: block;
 	height: 0.75em;
 	position: absolute;
@@ -2963,7 +2966,7 @@ body.landing {
 #banner {
 	background-attachment: scroll, fixed;
 	background-color: #494d53;
-	background-image: url("images/overlay.png"), url("../../images/banner.jpg");
+	background-image: url('images/overlay.png'), url('../../images/banner.jpg');
 	background-position: top left, center center;
 	background-repeat: repeat, no-repeat;
 	background-size: auto, over;
@@ -2979,7 +2982,7 @@ body.landing {
 	-ms-transition: opacity 2s ease-in-out;
 	transition: opacity 2s ease-in-out;
 	background: #3d4045;
-	content: "";
+	content: '';
 	height: 100%;
 	left: 0;
 	opacity: 0;
@@ -3311,7 +3314,7 @@ body.is-preload #banner:after {
 		background: rgba(103, 107, 113, 0.75);
 		border-radius: 0.5em;
 		color: #fff;
-		content: "\f0c9";
+		content: '\f0c9';
 		display: block;
 		font-size: 16px;
 		height: 2.25em;
@@ -3462,9 +3465,9 @@ body.is-preload #banner:after {
 
 	/* Button */
 
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
+	input[type='submit'],
+	input[type='reset'],
+	input[type='button'],
 	.button {
 		font-size: 0.8em !important;
 	}
@@ -3570,9 +3573,9 @@ body.is-preload #banner:after {
 
 	/* Button */
 
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
+	input[type='submit'],
+	input[type='reset'],
+	input[type='button'],
 	.button {
 		padding: 0;
 	}
@@ -3671,4 +3674,13 @@ body.is-preload #banner:after {
 .logo-img {
 	width: 600px;
 	height: auto;
+}
+
+.logo-header {
+	height: 50px;
+	width: auto;
+}
+
+a.link {
+	border-bottom: none !important;
 }
